sonar-fixes and code formatting